# opensearch-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  env.example  indexer.Dockerfile  notebook.Dockerfile  opensearch_eval_colbert.ipynb  opensearch_index_makar_ozon_semantic.ipynb  opensearch_index_makar_sdek1.ipynb  pyproject.toml  requirements.txt  test_queries_bank_docs.json  test_queries_semantic.json
.github/workflows/: publish.yaml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
scripts/: __init__.py  burnout_agent.py  opensearch_config.py
scripts/api/: __init__.py  main.py  schemas.py
scripts/services/: __init__.py  colbert_reranker.py  hyde_service.py  local_llm_service.py  opensearch_service.py  search_service.py  yandex_service.py
